@@ -1,5 +1,9 @@
 2001-04-22  Martin Baulig  <baulig@suse.de>
 
+	* test-libgnome.c (test_bonobo): Added little bonobo-conf test.
+
+2001-04-22  Martin Baulig  <baulig@suse.de>
+
 	* libgnome-2.0.pc.in: We don't need libgnomebase anymore.
 
 	* libgnome-init.c (gnome_oaf_pre_args_parse): Call g_thread_init().
